# STPCalculator

./: CMakeLists.txt  CommonImport.cpp  CommonImport.h  Component.cpp  Component.h  IShape.cpp  IShape.h  InputOptions.cpp  InputOptions.h  Json.hpp  JsonWriter.cpp  JsonWriter.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  NumTool.h  OCCLib.h  OCCUtil.cpp  OCCUtil.h  STEP_Data.cpp  STEP_Data.h  StepCalculator.cpp  StepReader.cpp  StepReader.h  StopWatch.cpp  StrTool.h  Tessellator.cpp  Tessellator.h  X3D_Writer.cpp  X3D_Writer.h
